k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-deployment
  template:
    metadata:
      labels:
        app: client-deployment
    spec:
      containers:
        - name: client-k8s-image
          image: client-k8s-image
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "1000Mi"
              cpu: "500m"
