k8s/client-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  client-service
spec:
  selector:
     app: client-deployment
  type: ClusterIP 
  ports:
  - name:  client-deployment
    port:  80
    targetPort:  3000
